<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_TargetValueDataType" Id="{bdf9663c-d273-44ef-98fd-53d77156e0e9}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
{attribute 'OPC.UA.DA.StructuredType' := '1'}
{attribute 'pack_mode' := '1'} 
{attribute 'OPC.UA.AdditionalStructuredType.NamespaceName' := 'http://audi.com/OpcUa/CentralIm/'}
{attribute 'OPC.UA.AdditionalStructuredType.Id' := 'i=3011'}
TYPE ST_TargetValueDataType :
STRUCT
	TargetValueType : UINT;
	TargetValue : DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>