<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_TimeModelDataType" Id="{f9abb509-c0b8-4afc-b7d1-4ece9f27c6a3}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
{attribute 'OPC.UA.DA.StructuredType' := '1'}
{attribute 'pack_mode' := '1'} 
{attribute 'OPC.UA.AdditionalStructuredType.NamespaceName' := 'http://audi.com/OpcUa/CentralIm/'}
{attribute 'OPC.UA.AdditionalStructuredType.Id' := 'i=3015'}
TYPE ST_TimeModelDataType :
STRUCT
	SwitchingObjectIdentification : BYTE;
	SwitchingObjectNumber : BYTE;
	{attribute 'OPC.UA.DA.Alias' := 'Date'}
	Date1 : DT;
	SwitchingTimes : ARRAY[0..2] OF DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>